--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.32.0
-moviepy==1.0.3
-opencv-python-headless==4.9.0.80
-scenedetect==0.6.2
-scikit-learn==1.4.2
+streamlit
+moviepy
+opencv-python
+scenedetect[pytorch]
+sklearn
